k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selfhosted-api
  namespace: apps-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selfhosted-api
  template:
    metadata:
      labels:
        app: selfhosted-api
    spec:
      containers:
        - name: selfhosted-api
          image: ghcr.io/joshi-labs/selfhosted-api:latest
          ports:
            - containerPort: 3000
