k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selfhosted-api
  namespace: apps-prod
spec:
  selector:
    app: selfhosted-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
